fix css dirty / todo fix stretch

--- a/scripts/core/stylesheets/general.css
+++ b/scripts/core/stylesheets/general.css
@@ -2,11 +2,13 @@
 
 html, body, .app,
 .workspaces, .workspace,
-.pages, .page {
+.pages, .page, .widgets {
     height: 100%;
     width: 100%;
 }
 
 .workspace, .page {
     float: left;
+    display: block;
 }
+
